<resources>
    <string name="app_name">ECommerce</string>
    <string name="add_product">Add Product</string>
    <string name="products">Products</string>
    <string name="cart">cart</string>
    <string name="admin">Admin</string>
    <string name="Precio">Price</string>
    <string name="buy">Buy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_product_name">Not valid name</string>
    <string name="invalid_product_price">Price must be > 0</string>


    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="productName">Product\n</string>
    <string name="price">Price</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>